--- a/src/pages/wordbuilder.astro
+++ b/src/pages/wordbuilder.astro
@@ -6,7 +6,7 @@ import wbBanner from '../images/wordbuilderApp1.png';
 import ppt from '../images/PPT.png';
 
 //import Walkthrough from '/pdfs/CALI-Reads-WordBuilder.pdf';
-//import Walkthroughimg from '../images/CALI-Reads-WB_Walkthrough.jpg';
+import Walkthroughimg from '../images/CALI-Reads-WB_Walkthrough.jpg';
 
 import { Icon } from 'astro-icon';
 
