edits to RT video

--- a/src/pages/reciprocal-teaching.astro
+++ b/src/pages/reciprocal-teaching.astro
@@ -22,7 +22,7 @@ import RTVideo from '../components/RTVideo.astro';
                             <h2>Go To Reciprocal Teaching Literacy Modules</h2> &nbsp;<Icon name="jam:arrow-circle-right" width='40'/></a>
                     </div>
                     <div class='section-title'>
-                        <h2>Reciprocal Training Webinar</h2>
+                        <h2>Reciprocal Teaching Training Webinar</h2>
                     </div>
                     
                     <div class='section-desc'>
