edits to button

--- a/src/components/HTMLButton.astro
+++ b/src/components/HTMLButton.astro
@@ -27,6 +27,8 @@ import LaunchSVG from '../images/SVG/launch.svg';
   display: inline-block;
   font-size: 12px;
   border:1px solid black;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
 }
 .button {
   transition-duration: 0.4s;
