--- a/src/pages/modules.astro
+++ b/src/pages/modules.astro
@@ -13,7 +13,22 @@ import ModuleNav from '../components/ModuleNav.astro';
     <ModuleNav />
 
     <section class="page-content" id="page-content">
-            <Modules />
+        <p class='intro'>CALI Reads offers 7 free e-Learning Courses on Adolescent Literacy Instruction. These courses can be used for professional learning by educators and administrators on how to provide quality literacy instruction proven to enhance content area learning (ELA, social studies, science, math, etc.).  </p>
+
+        <p class='intro'>
+            Each e-Learning course takes approximately 2-3 hours to complete. You can launch the full course below or complete it section by section.
+        </p>
+        
+        <p class="intro">You can make a difference for your students! They deserve your best. Get started today! </p>
+        
+        <Modules />
 
 </section>
 </ModuleLayout>
+
+
+<style>
+    .intro{
+        font-size: larger;
+    }
+</style>
